--- a/styles/main.css
+++ b/styles/main.css
@@ -3,29 +3,40 @@ html, body, main, .earth-wrapper {
     min-height: 100%;
     margin: 0;
     padding: 0;
+    overflow: hidden;
+    position: relative;
 }
 
 
 
 
+header {
+    height: 200px;
+    background: red;
+    width: 100%;
+}
 
 
-
-
+h2#current { 
+        color: #F6C1BC;
+        font-family: Verdana; 
+        text-align: center; 
+        min-height: 30px;
+}
+.clouds {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
 
 
 
 #globe {
     cursor: move;  
+    width: 500px;
+    height: 400px;
   }
   
-  #current {
-    position: absolute;
-    color: #F6C1BC;
-    font-family: Verdana;
-    margin-left: 40%;
-    margin-top: 2%;
-  }
   
   .system {
     position: relative;
@@ -97,40 +108,3 @@ html, body, main, .earth-wrapper {
       to {background-position:10000px 0;}
   }
   
-  .stars, .twinkling, .clouds {
-    position:absolute;
-    top:0;
-    left:0;
-    right:0;
-    bottom:0;
-    width:100%;
-    height:100%;
-    display:block;
-  }
-  
-  .stars {
-    background:#000 url(http://www.script-tutorials.com/demos/360/images/stars.png) repeat top center;
-    z-index:0;
-  }
-  
-  .twinkling{
-    background:transparent url(http://www.script-tutorials.com/demos/360/images/twinkling.png) repeat top center;
-    z-index:1;
-  
-    -moz-animation:move-twink-back 200s linear infinite;
-    -ms-animation:move-twink-back 200s linear infinite;
-    -o-animation:move-twink-back 200s linear infinite;
-    -webkit-animation:move-twink-back 200s linear infinite;
-    animation:move-twink-back 200s linear infinite;
-  }
-  
-  .clouds{
-     background:transparent url(http://www.script-tutorials.com/demos/360/images/clouds3.png) repeat top center;
-      z-index:3;
-  
-    -moz-animation:move-clouds-back 200s linear infinite;
-    -ms-animation:move-clouds-back 200s linear infinite;
-    -o-animation:move-clouds-back 200s linear infinite;
-    -webkit-animation:move-clouds-back 200s linear infinite;
-    animation:move-clouds-back 200s linear infinite;
-  }
