--- a/styles/main.css
+++ b/styles/main.css
@@ -33,8 +33,8 @@ h2#current {
 
 #globe {
     cursor: move;  
-    width: 500px;
-    height: 400px;
+    max-width: 100%;
+    max-height: 100%;
   }
   
   
