--- a/styles/main.css
+++ b/styles/main.css
@@ -1,6 +1,9 @@
+html, body {
+    min-height: 100%;
+    height: 100%;
+}
 html, body, main, .earth-wrapper {
     width: 100%;
-    min-height: 100%;
     margin: 0;
     padding: 0;
     overflow: hidden;
@@ -11,14 +14,30 @@ html, body, main, .earth-wrapper {
 
 
 header {
-    height: 200px;
+    height: 100px;
     background: red;
     width: 100%;
 }
 
 
-h2#current { 
-        color: #F6C1BC;
+main {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    height: calc(100% - 100px);
+}
+main div {
+    width: 100%;
+    display: flex;
+    justify-content: flex-start;
+    align-items: center; 
+    height: 100%;
+    overflow: hidden;
+}
+
+h2#countryName { 
+        color: #4e3e3d;
         font-family: Verdana; 
         text-align: center; 
         min-height: 30px;
@@ -29,82 +48,10 @@ h2#current {
     align-items: center;
 }
 
-
-
-#globe {
-    cursor: move;  
-    max-width: 100%;
-    max-height: 100%;
-  }
-  
-  
-  .system {
-    position: relative;
-    width: 100%;
-    height: 100%;
-    
-    -webkit-transform: rotateX(75deg) rotateY(-30deg);
-    transform: rotateX(75deg) rotateY(-30deg);
-    -webkit-transform-style: preserve-3d;
-    transform-style: preserve-3d;
-  }
-  .planet, .satellite-orbit, .satellite {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    
-    -webkit-transform-style: preserve-3d;
-    transform-style: preserve-3d;
-  }
-  
-  @-webkit-keyframes orbit {
-      0% {
-          transform: rotateZ(0deg);
-      }
-      100% {
-          transform: rotateZ(360deg);
-      }
-  }
-  @keyframes orbit {
-      0% {
-          transform: rotateZ(0deg);
-      }
-      100% {
-          transform: rotateZ(360deg);
-      }
-  }
-  
-  @keyframes move-twink-back {
-      from {background-position:0 0;}
-      to {background-position:-10000px 5000px;}
-  }
-  @-webkit-keyframes move-twink-back {
-      from {background-position:0 0;}
-      to {background-position:-10000px 5000px;}
-  }
-  @-moz-keyframes move-twink-back {
-      from {background-position:0 0;}
-      to {background-position:-10000px 5000px;}
-  }
-  @-ms-keyframes move-twink-back {
-      from {background-position:0 0;}
-      to {background-position:-10000px 5000px;}
-  }
-  
-  @keyframes move-clouds-back {
-      from {background-position:0 0;}
-      to {background-position:10000px 0;}
-  }
-  @-webkit-keyframes move-clouds-back {
-      from {background-position:0 0;}
-      to {background-position:10000px 0;}
-  }
-  @-moz-keyframes move-clouds-back {
-      from {background-position:0 0;}
-      to {background-position:10000px 0;}
-  }
-  @-ms-keyframes move-clouds-back {
-      from {background-position: 0;}
-      to {background-position:10000px 0;}
-  }
-  
+ .earth-wrapper {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    width: calc(100% - 100px);
+ }
