--- a/styles/sidebar.css
+++ b/styles/sidebar.css
@@ -1,10 +1,18 @@
 sidebar input {
     width: calc(100% - 8px);
     height: 28px;
-    border-radius: 5px;
+    /* border-radius: 5px; */
     border: none;
     padding: 4px;
     font-size: 20px;
+    outline: none;
+    background: none;
+    border-bottom: 4px solid #fff;
+    color: #fff;
+}
+
+::-webkit-input-placeholder {
+    color:#bbb;
 }
 
 
