--- a/styles/header.css
+++ b/styles/header.css
@@ -1,8 +1,7 @@
 :root {
     --headerBgc: #fff;
-    --headerBgcRevert: #3c3c3c;
-    --headerColor: #000;
-    --headerRevert: #fff;
+    --headerButtonBgc: #6daeff;
+    --headerHoverBcg: #1e437261; 
 }
 
 header {
@@ -13,7 +12,7 @@ header {
     width: 100%;
     /* padding: 0px 7% 0 10%; */ 
     background: var(--headerBgc);
-    color: var(--headerColor);
+    color: var(--accentColor);
     /* margin: 0 auto;
     border-bottom-right-radius: 9px;
     border-bottom-left-radius: 9px;  */
@@ -48,6 +47,10 @@ header logo h1 {
 
 
 
+
+
+
+
 header settings { 
     display: flex;
     flex-direction: row;
@@ -67,13 +70,17 @@ header settings span {
     justify-content: flex-start;
     align-items: center;
     position: relative;
-    border: 1px solid var(--headerColor);
+    border: 1px solid var(--accentColor);
     margin: 0 4px;
     border-radius: 3px;
     overflow: hidden;
     height: 30px;
     z-index: 2;
 }
+
+
+
+
 
 
 header settings button {
@@ -86,21 +93,25 @@ header settings button {
     margin: 0;
     padding: 0 10px;
     border: 0;
-    background: none;
+    background: none; 
+    color: var(--accentColor);
 } 
 header settings button:hover {
-    background: var(--headerBgcRevert);
-    color: var(--headerRevert);
-    opacity: .6;
+    background: var(--headerHoverBcg);
+    color: var(--revertColor); 
 }
 header settings button:last-child {
     border: none;
 } 
 
 header settings button.active-btn {
-    background: var(--headerBgcRevert);
-    color: var(--headerRevert);
+    background: var(--headerButtonBgc);
+    color: var(--revertColor);
 } 
+
+
+
+
 
 
 
@@ -108,6 +119,9 @@ header settings button.active-btn {
 header settings span.header-choosetype {
     margin: 0 auto 0 4px;
 }
+
+
+
 
 
 
@@ -120,7 +134,7 @@ header settings span.header-theme button::after {
     width: 1px;
     height: 80%; 
     right: -1px;
-    background: var(--headerColor);
+    background: var(--accentColor);
 }
 header settings span.header-theme button:last-child:after {
     width: 0;
