--- a/styles/index.css
+++ b/styles/index.css
@@ -1,6 +1,10 @@
 :root {
-    /*--bodyBgc: linear-gradient(138deg, #2092e382, #ccff0000); */
-    --bodyBgc: #f3e5d56b;
+    /*--bodyBgc: linear-gradient(174deg, #3a3a3a, #15151e) 
+    --mainColor: #fff;
+    */
+    --mainBackground: #f3e5d56b;
+    --accentColor: #444;
+    --revertColor: #fff;
 }
 
 html, body, main {
@@ -18,7 +22,8 @@ html, body, main, .earth-wrapper {
 body {
     display: flex;
     flex-direction: column;
-    background: var(--bodyBgc);
+    background: var(--mainBackground);
+    color: var(--accentColor);
 }
 
 content {
@@ -33,3 +38,15 @@ content {
     flex-wrap: wrap;
     overflow: auto;
 }
+
+
+
+.non-select {
+    -webkit-touch-callout: none; /* iOS Safari */
+      -webkit-user-select: none; /* Safari */
+       -khtml-user-select: none; /* Konqueror HTML */
+         -moz-user-select: none; /* Old versions of Firefox */
+          -ms-user-select: none; /* Internet Explorer/Edge */
+              user-select: none; /* Non-prefixed version, currently
+                                    supported by Chrome, Edge, Opera and Firefox */
+  }
