--- a/styles/earth.css
+++ b/styles/earth.css
@@ -1,4 +1,3 @@
-
 main {
     display: flex;
     justify-content: center;
@@ -17,6 +16,7 @@ main div {
     border-radius: 1000px;
     overflow: hidden;
     background: linear-gradient(104deg, #74ace58f, transparent);
+    border: 2px solid #000;
 }
 
 h2#countryName {  
