--- a/styles/header.css
+++ b/styles/header.css
@@ -1,9 +1,3 @@
-:root {
-    --headerBgc: #fff;
-    --headerButtonBgc: #6daeff;
-    --headerHoverBcg: #1e437261; 
-}
-
 header {
     display: flex;
     justify-content: center;
@@ -106,7 +100,7 @@ header settings button:last-child {
 
 header settings button.active-btn {
     background: var(--headerButtonBgc);
-    color: var(--revertColor);
+    color: #000;
 } 
 
 
