--- a/styles/index.css
+++ b/styles/index.css
@@ -40,4 +40,8 @@ content {
           -ms-user-select: none; /* Internet Explorer/Edge */
               user-select: none; /* Non-prefixed version, currently
                                     supported by Chrome, Edge, Opera and Firefox */
-  }
+}
+
+::-webkit-scrollbar {
+    width: 0;
+}
