set fonts to the blocks

--- a/styles/earth.css
+++ b/styles/earth.css
@@ -20,7 +20,7 @@ main div {
 }
 
 h2#countryName {  
-    font-family: Verdana; 
+    font-family: Neris; 
     text-align: center; 
-    min-height: 30px;
+    min-height: 32px;
 } 
