--- a/styles/header.css
+++ b/styles/header.css
@@ -29,14 +29,13 @@ header logo {
     min-width: 320px;
 }
 header logo img {
-    height: 48px;
-    margin-right: 21px;
+    height: 36px;
+    margin-right: 18px;
 }
 header logo h1 {
-    font-size: 32px;
-    letter-spacing: 5px;
-    font-weight: 100;
-    display: flex;
+    font-size: 36px;
+    letter-spacing: 12px;
+    font-family: 'Aetherius';
 }
 
 
@@ -89,6 +88,7 @@ header settings button {
     border: 0;
     background: none; 
     color: var(--accentColor);
+    font-family: 'Poppins';
 } 
 header settings button:hover {
     background: var(--headerHoverBcg);
