--- a/styles/sidebar.css
+++ b/styles/sidebar.css
@@ -14,7 +14,7 @@ sidebar input {
 
 sidebar input::-webkit-input-placeholder {
     color:var(--sdPlaceholder);
-    font-family: 'Poppins';
+    font-family: 'Verdana'; /*Poppins*/
 }
 
 
